--- a/Game Design/Game Chart Archive.html
+++ b/Game Design/Game Chart Archive.html
@@ -6,7 +6,8 @@ Title Logo Up top
 [[Load]]
 [[Settings]]
 [[Credits]]
-[[Exit]]</tw-passagedata><tw-passagedata pid="2" name="Load" tags="" position="92,89" size="100,100">[[Back-&gt;Main Menu]]</tw-passagedata><tw-passagedata pid="3" name="Settings" tags="Sub-Menu UI" position="229,210" size="100,100">[[Back-&gt;Main Menu]]</tw-passagedata><tw-passagedata pid="4" name="Credits" tags="Cutscene" position="686,208" size="100,100">[[*double click-&gt;Main Menu]]</tw-passagedata><tw-passagedata pid="5" name="Exit" tags="" position="884,98" size="100,100">Are you sure you want to exit?
+[[Exit]]</tw-passagedata><tw-passagedata pid="2" name="Load" tags="" position="92,89" size="100,100">Load [[save]] file
+[[Back-&gt;Main Menu]]</tw-passagedata><tw-passagedata pid="3" name="Settings" tags="Sub-Menu UI" position="229,210" size="100,100">[[Back-&gt;Main Menu]]</tw-passagedata><tw-passagedata pid="4" name="Credits" tags="Cutscene" position="686,208" size="100,100">[[*double click-&gt;Main Menu]]</tw-passagedata><tw-passagedata pid="5" name="Exit" tags="" position="884,98" size="100,100">Are you sure you want to exit?
 [[Yes-&gt;Close Application]]
 [[No-&gt;Main Menu]]</tw-passagedata><tw-passagedata pid="6" name="Intro Letter" tags="Cutscene" position="457,451" size="100,100">*Letter with voice over:*
 
@@ -35,18 +36,44 @@ I, [[Gerald Lee]], being of full age and sound mind and memory, do make, publish
 [[Protagonist]]: &quot;Well of course you would leave an insane amount of work, what was I thinking you&#39;ll once leave me something without one of your goddamn challenges or you testing how much i would conform to your stupid idea of manhood. Damm grandpa even in the end you would not a change a little bit.&quot;
 
 [[Narrator]]: &quot;He laughs at his own misery being alone in this huge worn out house, with no where else to go, with no idea what he will find and no idea what he will find out about his grandfather and about himself.&quot; With all of that going through his mind, he feels himself getting tired from the long time on the road and decides to look for a place to crush for the night.&quot;
-[[Continue-&gt;Looking for a place to sleep]]</tw-passagedata><tw-passagedata pid="13" name="Main Hall" tags="Location" position="935,796" size="100,100">Quests: [[Looking for a place to sleep]] </tw-passagedata><tw-passagedata pid="14" name="Narrator" tags="Character" position="103,728" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="15" name="Looking for a place to sleep" tags="Gameplay Quest" position="456,881" size="100,100">Locations: [[Main Hall]] [[bedroom]] 
+[[Continue-&gt;Looking for a place to sleep]]</tw-passagedata><tw-passagedata pid="13" name="Main Hall" tags="Location" position="935,796" size="100,100">Quests: [[Looking for a place to sleep]] 
+
+An old hall with two staircases one leading to the [[bedroom]] and one leeding to the [[Dining Hall]]
+
+Main HUB of the game world
+
+Starts worn out
+
+Upon contiuing through the main Quest gets cleaned up
+
+Interactions:
+[[carpet]] 
+[[closet]]
+[[closet key]] 
+[[misplaced cupboard]] 
+[[fire extinguisher]]</tw-passagedata><tw-passagedata pid="14" name="Narrator" tags="Character" position="103,728" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="15" name="Looking for a place to sleep" tags="Gameplay Quest" position="456,881" size="100,100">Locations: [[Main Hall]] [[bedroom]] 
 Goal: Find a place to sleep for the night
 Obstacles: 
 The staircase to the [[bedroom]] is being blocked by a [[misplaced cupboard]].
 The cupboard won&#39;t move
-Solution:</tw-passagedata><tw-passagedata pid="16" name="misplaced cupboard" tags="Object" position="931,1548" size="100,100">Location: [[Main Hall]]
+Solution:
+Pull the [[carpet]] to find the [[closet key]] 
+Use the [[closet key]] on the [[closet]] to gain the [[fire extinguisher]] 
+Use the [[fire extinguisher]] on the [[misplaced cupboard]] to unlock the acsses to the [[bedroom]] 
+Use the [[bed]] to sleep and [[save]] your progress
+
+[[quest completion-&gt;second quest intro]]</tw-passagedata><tw-passagedata pid="16" name="misplaced cupboard" tags="Object" position="931,1548" size="100,100">Location: [[Main Hall]]
 
 Quest: [[Looking for a place to sleep]] 
 
 A massive old wooden cuboard standing in front of the staircase to the [[bedroom]]
 Through punching it with a [[fire extinguisher]] the cuboard falls towards the playerd and can be walked over now to acsess the [[bedroom]]
-</tw-passagedata><tw-passagedata pid="17" name="bedroom" tags="Location" position="1126,797" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="18" name="fire extinguisher" tags="Object Pick-Up" position="933,1395" size="100,100">Location: [[Main Hall]] 
+</tw-passagedata><tw-passagedata pid="17" name="bedroom" tags="Location" position="1126,797" size="100,100">Quests:
+[[Looking for a place to sleep]] 
+An old bedroom with an hughe [[bed]] in the center
+Worn out but not dusty
+Gets renewed upon Quest progression
+</tw-passagedata><tw-passagedata pid="18" name="fire extinguisher" tags="Object Pick-Up" position="933,1395" size="100,100">Location: [[Main Hall]] 
 
 Quest: [[Looking for a place to sleep]] 
 
@@ -85,6 +112,19 @@ Found under the [[carpet]] of the [[Main Hall]]
 
 Quest: [[Looking for a place to sleep]]
 
+Must be Pulled to gain accses to the [[closet key]]
 
-Must be Pulled to gain accses to the [[closet key]] </tw-passagedata></tw-storydata>
+*Look at:*
+
+[[Protagonist]]: Uh gross!
+
+[[Narrator]]: [[Protagonist]] calls out in disgust, as he looks at the old, once truly magnificent carpet, which since has been so worn out that it&#39;s full of holes, small heaps of dust and other unidentifiable substances.</tw-passagedata><tw-passagedata pid="22" name="Dining Hall" tags="Location" position="745,801" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="23" name="bed" tags="Object" position="1126,947" size="100,100">Quest:
+[[Looking for a place to sleep]] 
+Location:
+[[bedroom]] 
+
+
+Here the [[Protagonist]] can sleep and therby [[save]] the players progress.</tw-passagedata><tw-passagedata pid="24" name="save" tags="" position="91,211" size="100,100">The game can be saved by using the [[bed]] 
+A file saving the games progress
+</tw-passagedata><tw-passagedata pid="25" name="second quest intro" tags="Cutscene" position="454,1025" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
 
