Update Game Chart Archive.html

--- a/Game Design/Game Chart Archive.html
+++ b/Game Design/Game Chart Archive.html
@@ -1,4 +1,4 @@
-<tw-storydata name="Global Game Jam" startnode="1" creator="Twine" creator-version="2.2.1" ifid="2F4D8A4A-3299-48E3-B540-49CD7A0BD27B" zoom="1" format="Harlowe" format-version="2.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="Cutscene" color="red"></tw-tag>,<tw-tag name="Character" color="yellow"></tw-tag>,<tw-tag name="Audio" color="blue"></tw-tag>,<tw-tag name="Gameplay-Passage" color="green"></tw-tag>,<tw-tag name="Art-Asset" color="gray"></tw-tag>,<tw-tag name="Gameplay" color="green"></tw-tag>,<tw-tag name="Location" color="orange"></tw-tag>,<tw-tag name="Dialouge" color="red"></tw-tag>,<tw-tag name="Object" color="purple"></tw-tag><tw-passagedata pid="1" name="Main Menu" tags="Menu UI" position="464,98" size="100,100">Shows the door to the mansions in the background
+<tw-storydata name="Global Game Jam" startnode="1" creator="Twine" creator-version="2.2.1" ifid="2F4D8A4A-3299-48E3-B540-49CD7A0BD27B" zoom="0.6" format="Harlowe" format-version="2.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="Cutscene" color="red"></tw-tag>,<tw-tag name="Character" color="yellow"></tw-tag>,<tw-tag name="Audio" color="blue"></tw-tag>,<tw-tag name="Gameplay-Passage" color="green"></tw-tag>,<tw-tag name="Art-Asset" color="gray"></tw-tag>,<tw-tag name="Gameplay" color="green"></tw-tag>,<tw-tag name="Location" color="orange"></tw-tag>,<tw-tag name="Dialouge" color="red"></tw-tag>,<tw-tag name="Object" color="purple"></tw-tag><tw-passagedata pid="1" name="Main Menu" tags="Menu UI" position="464,98" size="100,100">Shows the door to the mansions in the background
 
 Title Logo Up top
 
@@ -25,7 +25,7 @@ I, [[Gerald Lee]], being of full age and sound mind and memory, do make, publish
 *Slow zoom onto the door*
 *Door opens with [[Squeek sound]]*
 *Fade to black*
-[[Game Start]]</tw-passagedata><tw-passagedata pid="11" name="Squeek sound" tags="SFX Audio" position="565,584" size="100,100">Noisy door opening ca 5 sec</tw-passagedata><tw-passagedata pid="12" name="Game Start" tags="Dialouge" position="457,727" size="100,100">*Enter [[Main Hall]]*
+[[Game Start]]</tw-passagedata><tw-passagedata pid="11" name="Squeek sound" tags="SFX Audio" position="631.6666666666666,577.3333333333334" size="100,100">Noisy door opening ca 5 sec</tw-passagedata><tw-passagedata pid="12" name="Game Start" tags="Dialouge" position="457,727" size="100,100">*Enter [[Main Hall]]*
 
 [[Narrator]]: &quot;Fighting his way through this horrible storm [[Protagonist]], finally approaches the door to his tragically acquired house. Upon entering he takes a deep breath and takes a look through the main hall, he finds himself in.&quot;
 
@@ -36,7 +36,7 @@ I, [[Gerald Lee]], being of full age and sound mind and memory, do make, publish
 [[Protagonist]]: &quot;Well of course you would leave an insane amount of work, what was I thinking you&#39;ll once leave me something without one of your goddamn challenges or you testing how much i would conform to your stupid idea of manhood. Damm grandpa even in the end you would not a change a little bit.&quot;
 
 [[Narrator]]: &quot;He laughs at his own misery being alone in this huge worn out house, with no where else to go, with no idea what he will find and no idea what he will find out about his grandfather and about himself.&quot; With all of that going through his mind, he feels himself getting tired from the long time on the road and decides to look for a place to crush for the night.&quot;
-[[Continue-&gt;Looking for a place to sleep]]</tw-passagedata><tw-passagedata pid="13" name="Main Hall" tags="Location" position="935,796" size="100,100">Quests: [[Looking for a place to sleep]] 
+[[Continue-&gt;Looking for a place to sleep]]</tw-passagedata><tw-passagedata pid="13" name="Main Hall" tags="Location" position="1276.0000000000002,475.99999999999994" size="100,100">Quests: [[Looking for a place to sleep]] 
 
 An old hall with two staircases one leading to the [[bedroom]] and one leeding to the [[Dining Hall]]
 
@@ -51,7 +51,9 @@ Interactions:
 [[closet]]
 [[closet key]] 
 [[misplaced cupboard]] 
-[[fire extinguisher]]</tw-passagedata><tw-passagedata pid="14" name="Narrator" tags="Character" position="103,728" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="15" name="Looking for a place to sleep" tags="Gameplay Quest" position="456,881" size="100,100">Locations: [[Main Hall]] [[bedroom]] 
+[[fire extinguisher]]</tw-passagedata><tw-passagedata pid="14" name="Narrator" tags="Character" position="103,728" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="15" name="Looking for a place to sleep" tags="Gameplay Quest" position="452.6666666666667,881" size="100,100">Locations: 
+[[Main Hall]]
+[[bedroom]] 
 Goal: Find a place to sleep for the night
 Obstacles: 
 The staircase to the [[bedroom]] is being blocked by a [[misplaced cupboard]].
@@ -59,35 +61,66 @@ The cupboard won&#39;t move
 Solution:
 Pull the [[carpet]] to find the [[closet key]] 
 Use the [[closet key]] on the [[closet]] to gain the [[fire extinguisher]] 
-Use the [[fire extinguisher]] on the [[misplaced cupboard]] to unlock the acsses to the [[bedroom]] 
+Use the [[fire extinguisher]] on the [[misplaced cupboard]] to unlock the acsses to the [[bedroom]]
+Entering the bedroom triggers this short [[conversation-&gt;entering bedroom]]
 Use the [[bed]] to sleep and [[save]] your progress
 
-[[quest completion-&gt;second quest intro]]</tw-passagedata><tw-passagedata pid="16" name="misplaced cupboard" tags="Object" position="931,1548" size="100,100">Location: [[Main Hall]]
+[[quest completion-&gt;second quest intro]]</tw-passagedata><tw-passagedata pid="16" name="misplaced cupboard" tags="Object" position="1273.6666666666665,1133.9999999999998" size="100,100">Location: [[Main Hall]]
 
 Quest: [[Looking for a place to sleep]] 
 
 A massive old wooden cuboard standing in front of the staircase to the [[bedroom]]
 Through punching it with a [[fire extinguisher]] the cuboard falls towards the playerd and can be walked over now to acsess the [[bedroom]]
-</tw-passagedata><tw-passagedata pid="17" name="bedroom" tags="Location" position="1126,797" size="100,100">Quests:
+
+
+*look at:*
+
+[[Narrator]]: &quot;A cupoard blocking the way to a staricase. [[Protagonist]] tries to remeber where it leads, but the memory is fleeing his tired mind. Still he leaves the cupboar with the feeling that he should probably should move it.&quot;
+
+*use, push, pull:*
+
+[[Protagonist]]: &quot;Uggh, no way&quot;
+
+*use [[fire extinguisher]] with cupboard:*
+
+*fade to black*
+
+[[Narrator]]: &quot;As he tries to move the cupboard through using the extinguisher as some sort of cowbar, [[Protagonist]] muscles resign from their intended use and he drops the extinguisher. The moment the Metal body touches the floor it bounces off off it and hits the cupboard, with its full weight. For a few second it seems like nothing would happen. Suddenly the Cupboard slowly starts falling toward him. In the last moment he manages to step aside, only closly avoiding the falling piece of wood.&quot;
+
+[[Protagonist]]: &quot;Well this should work&quot;
+
+*Transform to [[Fallen Cuboard]]</tw-passagedata><tw-passagedata pid="17" name="bedroom" tags="Location" position="1474.3333333333335,475.33333333333326" size="100,100">Quests:
 [[Looking for a place to sleep]] 
 An old bedroom with an hughe [[bed]] in the center
 Worn out but not dusty
 Gets renewed upon Quest progression
-</tw-passagedata><tw-passagedata pid="18" name="fire extinguisher" tags="Object Pick-Up" position="933,1395" size="100,100">Location: [[Main Hall]] 
+</tw-passagedata><tw-passagedata pid="18" name="fire extinguisher" tags="Object Pick-Up" position="1276,1005.6666666666665" size="100,100">Location: [[Main Hall]] 
 
 Quest: [[Looking for a place to sleep]] 
 
 An old fire extinguisher
 Long expired
 Is Used to punch down the [[misplaced cupboard]] 
-Is accuired through opening a [[closet]] with the [[closet key]]</tw-passagedata><tw-passagedata pid="19" name="closet" tags="Object" position="933,1256" size="100,100">Location: [[Main Hall]]
+Is accuired through opening a [[closet]] with the [[closet key]]
+
+*look at:*
+[[Narrator]]: &quot;A long expired fire extinguisher, it might not extinguish fires anymore but its always nice to know its around. You&#39;ll never know when you could need one.&quot;
+
+*pick up:*
+[[Narrator]]: &quot;Knowing he will need it for something, [[Protagonist]] picks up the old extingusher.&quot;
+
+[[Protagonist]]: &quot;Maybe I&#39;ll need to punch some bad guys or good guys or something, but I will use it to punch something. Thats for certain.&quot;</tw-passagedata><tw-passagedata pid="19" name="closet" tags="Object" position="1278,877.3333333333335" size="100,100">Location: [[Main Hall]]
 
 Quest: [[Looking for a place to sleep]] 
 
 An closet with glass doors containing the [[fire extinguisher]]
 Opened through using the [[closet key]] on it.
 
-*Use [[closet key]] on [[closet]]:*
+*Look at*
+
+[[Narrator]]: &quot;An old closet. A sign on it says: to be opend in case the house is burning or you needing a fire extinguisher for something. At least thats what [[Protagonist]] understands.&quot;
+
+*Use [[closet key]] on closet:*
 
 [[Narrator]]: &quot;As he approaches the closet [[Protagonist]] searches for a keyhole for the closet key.
 But there is none to be found.&quot;
@@ -98,7 +131,7 @@ But there is none to be found.&quot;
 With growing anger he starts to throw them harder and harder until suddenly:&quot; 
 *play crack sound*
 
-</tw-passagedata><tw-passagedata pid="20" name="closet key" tags="Object Pick-Up" position="937,1107" size="100,100">Location: [[Main Hall]] 
+</tw-passagedata><tw-passagedata pid="20" name="closet key" tags="Object Pick-Up" position="1277,758.6666666666667" size="100,100">Location: [[Main Hall]] 
 
 Quest: [[Looking for a place to sleep]]
 
@@ -108,7 +141,13 @@ Obviously the closet key i mean thats the name of the item within the inventory
 
 Found under the [[carpet]] of the [[Main Hall]]
 
-</tw-passagedata><tw-passagedata pid="21" name="carpet" tags="Object" position="936,944" size="100,100">Location: [[Main Hall]] 
+*look at:*
+
+[[Protagonist]]: &quot;Told ya&quot;
+
+*pick up:*
+
+[[Narrator]]: &quot;Happy with his self fulfilling prophecy becomming true, he picks up the closet key.&quot;</tw-passagedata><tw-passagedata pid="21" name="carpet" tags="Object" position="1276.0000000000002,624" size="100,100">Location: [[Main Hall]] 
 
 Quest: [[Looking for a place to sleep]]
 
@@ -116,9 +155,15 @@ Must be Pulled to gain accses to the [[closet key]]
 
 *Look at:*
 
-[[Protagonist]]: Uh gross!
+[[Protagonist]]: &quot;Uh gross!&quot;
 
-[[Narrator]]: [[Protagonist]] calls out in disgust, as he looks at the old, once truly magnificent carpet, which since has been so worn out that it&#39;s full of holes, small heaps of dust and other unidentifiable substances.</tw-passagedata><tw-passagedata pid="22" name="Dining Hall" tags="Location" position="745,801" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="23" name="bed" tags="Object" position="1126,947" size="100,100">Quest:
+[[Narrator]]: &quot;[[Protagonist]] calls out in disgust, as he looks at the old, once truly magnificent carpet, which since has been so worn out that it&#39;s full of holes, small heaps of dust and other unidentifiable substances.&quot;
+
+*Pull:*
+
+[[Protagonist]]: &quot;OK fine I&#39;ll pull it but only since their has to be something under every carptet.&quot;
+
+[[Narrator]]: &quot;As he pulls the carpet, dust clouds fill the room. He coughes and as his sight clears he sees a small key lying on the floor.&quot;</tw-passagedata><tw-passagedata pid="22" name="Dining Hall" tags="Location" position="1083.3333333333333,475.33333333333326" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="23" name="bed" tags="Object" position="1474.3333333333335,625.3333333333334" size="100,100">Quest:
 [[Looking for a place to sleep]] 
 Location:
 [[bedroom]] 
@@ -126,5 +171,12 @@ Location:
 
 Here the [[Protagonist]] can sleep and therby [[save]] the players progress.</tw-passagedata><tw-passagedata pid="24" name="save" tags="" position="91,211" size="100,100">The game can be saved by using the [[bed]] 
 A file saving the games progress
-</tw-passagedata><tw-passagedata pid="25" name="second quest intro" tags="Cutscene" position="454,1025" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
+</tw-passagedata><tw-passagedata pid="25" name="second quest intro" tags="Cutscene" position="454,1025" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="26" name="Fallen Cuboard" tags="" position="1270.3333333333333,1279" size="100,100">The [[misplaced cupboard]], now liyng on the floor is now mearly something the player can move over to acsess the staircase to the [[bedroom]] </tw-passagedata><tw-passagedata pid="27" name="entering bedroom" tags="Cutscene" position="624,876" size="100,100">Location: 
+[[bedroom]] 
+Quest:
+[[Looking for a place to sleep]] 
+
+Upon entering the bedroom for the first time the following dialouge occurs:
+
+</tw-passagedata></tw-storydata>
 
