Update Game Chart Archive.html

--- a/Game Design/Game Chart Archive.html
+++ b/Game Design/Game Chart Archive.html
@@ -163,13 +163,25 @@ Must be Pulled to gain accses to the [[closet key]]
 
 [[Protagonist]]: &quot;OK fine I&#39;ll pull it but only since their has to be something under every carptet.&quot;
 
-[[Narrator]]: &quot;As he pulls the carpet, dust clouds fill the room. He coughes and as his sight clears he sees a small key lying on the floor.&quot;</tw-passagedata><tw-passagedata pid="22" name="Dining Hall" tags="Location" position="1083.3333333333333,475.33333333333326" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="23" name="bed" tags="Object" position="1474.3333333333335,625.3333333333334" size="100,100">Quest:
+[[Narrator]]: &quot;As he pulls the carpet, dust clouds fill the room. He coughes and as his sight clears he sees a small key lying on the floor.&quot;</tw-passagedata><tw-passagedata pid="22" name="Dining Hall" tags="Location" position="1083.3333333333333,475.33333333333326" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="23" name="bed" tags="Object" position="1471,630.3333333333334" size="100,100">Quest:
 [[Looking for a place to sleep]] 
 Location:
 [[bedroom]] 
 
 
-Here the [[Protagonist]] can sleep and therby [[save]] the players progress.</tw-passagedata><tw-passagedata pid="24" name="save" tags="" position="91,211" size="100,100">The game can be saved by using the [[bed]] 
+Here the [[Protagonist]] can sleep and therby [[save]] the players progress.
+
+*Look at:*
+
+[[Narrator]]: &quot;Looking at this huhge bed [[Protagonist]] realizes how long it has been since he had a good nights rest, he reminisces of his past and gets sleepy while trying to rate his past beds on a scale of comfort.&quot;
+
+*Use*
+
+[[Narrator]]: &quot;Finally he can rest and forget about this whole situation for a while.&quot;
+
+*Do you want to save the game?*
+*[[Yes-&gt;save]] 
+No: Continue*</tw-passagedata><tw-passagedata pid="24" name="save" tags="" position="91,211" size="100,100">The game can be saved by using the [[bed]] 
 A file saving the games progress
 </tw-passagedata><tw-passagedata pid="25" name="second quest intro" tags="Cutscene" position="454,1025" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="26" name="Fallen Cuboard" tags="" position="1270.3333333333333,1279" size="100,100">The [[misplaced cupboard]], now liyng on the floor is now mearly something the player can move over to acsess the staircase to the [[bedroom]] </tw-passagedata><tw-passagedata pid="27" name="entering bedroom" tags="Cutscene" position="624,876" size="100,100">Location: 
 [[bedroom]] 
@@ -178,5 +190,7 @@ Quest:
 
 Upon entering the bedroom for the first time the following dialouge occurs:
 
-</tw-passagedata></tw-storydata>
+[[Narrator]]: &quot;As he enters the old bedroom, pictures spring to his mind, pictures of a happy past. Him and his sister jumping on the bed, running through the halls, and his grandparents complaning about getting woken up so early.&quot;
+[[Protagonist]]: &quot;Good times&quot;
+[[Narrator]]: &quot;He says to himself. Not that he actually rembered if they were any good. He just needs the to be good for the moment.&quot;</tw-passagedata></tw-storydata>
 
