Update Game Chart Archive.html

--- a/Game Design/Game Chart Archive.html
+++ b/Game Design/Game Chart Archive.html
@@ -6,10 +6,16 @@ Title Logo Up top
 [[Load]]
 [[Settings]]
 [[Credits]]
-[[Exit]]</tw-passagedata><tw-passagedata pid="2" name="Load" tags="" position="92,89" size="100,100">Load [[save]] file
-[[Back-&gt;Main Menu]]</tw-passagedata><tw-passagedata pid="3" name="Settings" tags="Sub-Menu UI" position="229,210" size="100,100">[[Back-&gt;Main Menu]]</tw-passagedata><tw-passagedata pid="4" name="Credits" tags="Cutscene" position="686,208" size="100,100">[[*double click-&gt;Main Menu]]</tw-passagedata><tw-passagedata pid="5" name="Exit" tags="" position="884,98" size="100,100">Are you sure you want to exit?
+[[Exit]]</tw-passagedata><tw-passagedata pid="2" name="Load" tags="" position="847,197.33333333333331" size="100,100">Load [[save]] file
+[[Back-&gt;Main Menu]]</tw-passagedata><tw-passagedata pid="3" name="Settings" tags="Sub-Menu UI" position="157.33333333333334,66.66666666666667" size="100,100">[[Back-&gt;Main Menu]]</tw-passagedata><tw-passagedata pid="4" name="Credits" tags="Cutscene" position="169.33333333333326,189.66666666666666" size="100,100">Programming and Art: Jan Schmitz
+Game Design, Narrative Design and Art: Jan Ole Rieger
+Audio and Art: Mike Terfuhr
+Voice Acting
+
+
+[[*double click*-&gt;Main Menu]]</tw-passagedata><tw-passagedata pid="5" name="Exit" tags="" position="877.3333333333334,49.666666666666664" size="100,100">Are you sure you want to exit?
 [[Yes-&gt;Close Application]]
-[[No-&gt;Main Menu]]</tw-passagedata><tw-passagedata pid="6" name="Intro Letter" tags="Cutscene" position="457,451" size="100,100">*Letter with voice over:*
+[[No-&gt;Main Menu]]</tw-passagedata><tw-passagedata pid="6" name="Intro Letter" tags="Cutscene" position="462,387.6666666666667" size="100,100">*Letter with voice over:*
 
 &#39;&#39;Last will and Testament&#39;&#39;
 
@@ -20,12 +26,12 @@ I, [[Gerald Lee]], being of full age and sound mind and memory, do make, publish
 *Washed out rest*
 *Signing and date*
 
-[[Next Scene-&gt;Intro Door]]</tw-passagedata><tw-passagedata pid="7" name="Close Application" tags="" position="884,248" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="8" name="Gerald Lee" tags="Character" position="103,600" size="100,100">Grandfather of our [[Protagonist]]</tw-passagedata><tw-passagedata pid="9" name="Protagonist" tags="Player Character Actor" position="101,456" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="10" name="Intro Door" tags="Cutscene" position="457,580" size="100,100">*Scene of an closed gate like door of your grandfathers mansion*
+[[Next Scene-&gt;Intro Door]]</tw-passagedata><tw-passagedata pid="7" name="Close Application" tags="" position="1037.3333333333333,78" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="8" name="Gerald Lee" tags="Character" position="108,586" size="100,100">Grandfather of our [[Protagonist]]</tw-passagedata><tw-passagedata pid="9" name="Protagonist" tags="Player Character Actor" position="106,392.6666666666667" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="10" name="Intro Door" tags="Cutscene" position="462,516.6666666666666" size="100,100">*Scene of an closed gate like door of your grandfathers mansion*
 *Rain, lightning and thunder at night*
 *Slow zoom onto the door*
 *Door opens with [[Squeek sound]]*
 *Fade to black*
-[[Game Start]]</tw-passagedata><tw-passagedata pid="11" name="Squeek sound" tags="SFX Audio" position="631.6666666666666,577.3333333333334" size="100,100">Noisy door opening ca 5 sec</tw-passagedata><tw-passagedata pid="12" name="Game Start" tags="Dialouge" position="457,727" size="100,100">*Enter [[Main Hall]]*
+[[Game Start]]</tw-passagedata><tw-passagedata pid="11" name="Squeek sound" tags="SFX Audio" position="603.3333333333333,520.6666666666666" size="100,100">Noisy door opening ca 5 sec</tw-passagedata><tw-passagedata pid="12" name="Game Start" tags="Dialouge" position="462,663.6666666666666" size="100,100">*Enter [[Main Hall]]*
 
 [[Narrator]]: &quot;Fighting his way through this horrible storm [[Protagonist]], finally approaches the door to his tragically acquired house. Upon entering he takes a deep breath and takes a look through the main hall, he finds himself in.&quot;
 
@@ -36,7 +42,7 @@ I, [[Gerald Lee]], being of full age and sound mind and memory, do make, publish
 [[Protagonist]]: &quot;Well of course you would leave an insane amount of work, what was I thinking you&#39;ll once leave me something without one of your goddamn challenges or you testing how much i would conform to your stupid idea of manhood. Damm grandpa even in the end you would not a change a little bit.&quot;
 
 [[Narrator]]: &quot;He laughs at his own misery being alone in this huge worn out house, with no where else to go, with no idea what he will find and no idea what he will find out about his grandfather and about himself.&quot; With all of that going through his mind, he feels himself getting tired from the long time on the road and decides to look for a place to crush for the night.&quot;
-[[Continue-&gt;Looking for a place to sleep]]</tw-passagedata><tw-passagedata pid="13" name="Main Hall" tags="Location" position="1276.0000000000002,475.99999999999994" size="100,100">Quests: [[Looking for a place to sleep]] 
+[[Continue-&gt;Looking for a place to sleep]]</tw-passagedata><tw-passagedata pid="13" name="Main Hall" tags="Location" position="1282.666666666667,404.3333333333333" size="100,100">Quests: [[Looking for a place to sleep]] 
 
 An old hall with two staircases one leading to the [[bedroom]] and one leeding to the [[Dining Hall]]
 
@@ -48,24 +54,29 @@ Upon contiuing through the main Quest gets cleaned up
 
 Interactions:
 [[carpet]] 
-[[closet]]
-[[closet key]] 
+[[dresser]]
+[[dresser key]] 
 [[misplaced cupboard]] 
-[[fire extinguisher]]</tw-passagedata><tw-passagedata pid="14" name="Narrator" tags="Character" position="103,728" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="15" name="Looking for a place to sleep" tags="Gameplay Quest" position="452.6666666666667,881" size="100,100">Locations: 
+[[fire extinguisher]]
+[[door to the dining hall]]</tw-passagedata><tw-passagedata pid="14" name="Narrator" tags="Character" position="108,716" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="15" name="Looking for a place to sleep" tags="Gameplay Quest" position="457.6666666666667,817.6666666666666" size="100,100">Locations: 
 [[Main Hall]]
 [[bedroom]] 
-Goal: Find a place to sleep for the night
+
+Goal: 
+Find a place to sleep for the night
+
 Obstacles: 
 The staircase to the [[bedroom]] is being blocked by a [[misplaced cupboard]].
 The cupboard won&#39;t move
+
 Solution:
-Pull the [[carpet]] to find the [[closet key]] 
-Use the [[closet key]] on the [[closet]] to gain the [[fire extinguisher]] 
+Pull the [[carpet]] to find the [[dresser key]] 
+Use the [[dresser key]] on the [[dresser]] to gain the [[fire extinguisher]] 
 Use the [[fire extinguisher]] on the [[misplaced cupboard]] to unlock the acsses to the [[bedroom]]
 Entering the bedroom triggers this short [[conversation-&gt;entering bedroom]]
 Use the [[bed]] to sleep and [[save]] your progress
 
-[[quest completion-&gt;second quest intro]]</tw-passagedata><tw-passagedata pid="16" name="misplaced cupboard" tags="Object" position="1273.6666666666665,1133.9999999999998" size="100,100">Location: [[Main Hall]]
+[[quest completion-&gt;second quest intro]]</tw-passagedata><tw-passagedata pid="16" name="misplaced cupboard" tags="Object" position="1280.3333333333333,1089" size="100,100">Location: [[Main Hall]]
 
 Quest: [[Looking for a place to sleep]] 
 
@@ -89,19 +100,28 @@ Through punching it with a [[fire extinguisher]] the cuboard falls towards the p
 
 [[Protagonist]]: &quot;Well this should work&quot;
 
-*Transform to [[Fallen Cuboard]]</tw-passagedata><tw-passagedata pid="17" name="bedroom" tags="Location" position="1474.3333333333335,475.33333333333326" size="100,100">Quests:
+*Transform to [[Fallen Cupboard]]</tw-passagedata><tw-passagedata pid="17" name="bedroom" tags="Location" position="1477.6666666666667,401.99999999999994" size="100,100">Quests:
 [[Looking for a place to sleep]] 
+[[Finding a place to eat]]
+
 An old bedroom with an hughe [[bed]] in the center
 Worn out but not dusty
 Gets renewed upon Quest progression
-</tw-passagedata><tw-passagedata pid="18" name="fire extinguisher" tags="Object Pick-Up" position="1276,1005.6666666666665" size="100,100">Location: [[Main Hall]] 
+
+Interactables:
+[[bed]]
+[[Side Table]]
+[[bedside lamp]] 
+[[Newspaper]] 
+[[Laundry bascet]] 
+[[Flashlight]] </tw-passagedata><tw-passagedata pid="18" name="fire extinguisher" tags="Object Pick-Up" position="1279.3333333333333,957.3333333333335" size="100,100">Location: [[Main Hall]] 
 
 Quest: [[Looking for a place to sleep]] 
 
 An old fire extinguisher
 Long expired
 Is Used to punch down the [[misplaced cupboard]] 
-Is accuired through opening a [[closet]] with the [[closet key]]
+Is accuired through opening a [[dresser]] with the [[dresser key]]
 
 *look at:*
 [[Narrator]]: &quot;A long expired fire extinguisher, it might not extinguish fires anymore but its always nice to know its around. You&#39;ll never know when you could need one.&quot;
@@ -109,35 +129,35 @@ Is accuired through opening a [[closet]] with the [[closet key]]
 *pick up:*
 [[Narrator]]: &quot;Knowing he will need it for something, [[Protagonist]] picks up the old extingusher.&quot;
 
-[[Protagonist]]: &quot;Maybe I&#39;ll need to punch some bad guys or good guys or something, but I will use it to punch something. Thats for certain.&quot;</tw-passagedata><tw-passagedata pid="19" name="closet" tags="Object" position="1278,877.3333333333335" size="100,100">Location: [[Main Hall]]
+[[Protagonist]]: &quot;Maybe I&#39;ll need to punch some bad guys or good guys or something, but I will use it to punch something. Thats for certain.&quot;</tw-passagedata><tw-passagedata pid="19" name="dresser" tags="Object" position="1278,832.0000000000001" size="100,100">Location: [[Main Hall]]
 
 Quest: [[Looking for a place to sleep]] 
 
-An closet with glass doors containing the [[fire extinguisher]]
-Opened through using the [[closet key]] on it.
+An dresser with glass doors containing the [[fire extinguisher]]
+Opened through using the [[dresser key]] on it.
 
 *Look at*
 
-[[Narrator]]: &quot;An old closet. A sign on it says: to be opend in case the house is burning or you needing a fire extinguisher for something. At least thats what [[Protagonist]] understands.&quot;
+[[Narrator]]: &quot;An old dresser. A sign on it says: to be opend in case the house is burning or you needing a fire extinguisher for something. At least thats what [[Protagonist]] understands.&quot;
 
-*Use [[closet key]] on closet:*
+*Use [[dresser key]] on dresser:*
 
-[[Narrator]]: &quot;As he approaches the closet [[Protagonist]] searches for a keyhole for the closet key.
+[[Narrator]]: &quot;As he approaches the dresser [[Protagonist]] searches for a keyhole for the dresser key.
 But there is none to be found.&quot;
 
 [[Protagonist]]: &quot;Oh come on thats just a terrible joke&quot;
 
-[[Narrator]]: &quot;Felling cheated on he decides to bend the rules a bit as well and starts throwing the key against the glass doors of the closet.
+[[Narrator]]: &quot;Felling cheated on he decides to bend the rules a bit as well and starts throwing the key against the glass doors of the dresser.
 With growing anger he starts to throw them harder and harder until suddenly:&quot; 
 *play crack sound*
 
-</tw-passagedata><tw-passagedata pid="20" name="closet key" tags="Object Pick-Up" position="1277,758.6666666666667" size="100,100">Location: [[Main Hall]] 
+</tw-passagedata><tw-passagedata pid="20" name="dresser key" tags="Object Pick-Up" position="1283.6666666666667,697.3333333333334" size="100,100">Location: [[Main Hall]] 
 
 Quest: [[Looking for a place to sleep]]
 
 An old rusted key
 
-Obviously the closet key i mean thats the name of the item within the inventory
+Obviously the dresser key i mean thats the name of the item within the inventory
 
 Found under the [[carpet]] of the [[Main Hall]]
 
@@ -147,11 +167,11 @@ Found under the [[carpet]] of the [[Main Hall]]
 
 *pick up:*
 
-[[Narrator]]: &quot;Happy with his self fulfilling prophecy becomming true, he picks up the closet key.&quot;</tw-passagedata><tw-passagedata pid="21" name="carpet" tags="Object" position="1276.0000000000002,624" size="100,100">Location: [[Main Hall]] 
+[[Narrator]]: &quot;Happy with his self fulfilling prophecy becomming true, he picks up the dresser key.&quot;</tw-passagedata><tw-passagedata pid="21" name="carpet" tags="Object" position="1281.0000000000002,560.6666666666666" size="100,100">Location: [[Main Hall]] 
 
 Quest: [[Looking for a place to sleep]]
 
-Must be Pulled to gain accses to the [[closet key]]
+Must be Pulled to gain accses to the [[dresser key]]
 
 *Look at:*
 
@@ -163,7 +183,9 @@ Must be Pulled to gain accses to the [[closet key]]
 
 [[Protagonist]]: &quot;OK fine I&#39;ll pull it but only since their has to be something under every carptet.&quot;
 
-[[Narrator]]: &quot;As he pulls the carpet, dust clouds fill the room. He coughes and as his sight clears he sees a small key lying on the floor.&quot;</tw-passagedata><tw-passagedata pid="22" name="Dining Hall" tags="Location" position="1083.3333333333333,475.33333333333326" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="23" name="bed" tags="Object" position="1471,630.3333333333334" size="100,100">Quest:
+[[Narrator]]: &quot;As he pulls the carpet, dust clouds fill the room. He coughes and as his sight clears he sees a small key lying on the floor.&quot;
+
+*Change Sprite to carpet moved and spawn [[dresser key]]*</tw-passagedata><tw-passagedata pid="22" name="Dining Hall" tags="Location" position="1096.6666666666667,400.33333333333326" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="23" name="bed" tags="Object" position="1471,562" size="100,100">Quest:
 [[Looking for a place to sleep]] 
 Location:
 [[bedroom]] 
@@ -181,9 +203,20 @@ Here the [[Protagonist]] can sleep and therby [[save]] the players progress.
 
 *Do you want to save the game?*
 *[[Yes-&gt;save]] 
-No: Continue*</tw-passagedata><tw-passagedata pid="24" name="save" tags="" position="91,211" size="100,100">The game can be saved by using the [[bed]] 
+No: Continue*</tw-passagedata><tw-passagedata pid="24" name="save" tags="" position="1017.6666666666667,230.99999999999991" size="100,100">The game can be saved by using the [[bed]] 
 A file saving the games progress
-</tw-passagedata><tw-passagedata pid="25" name="second quest intro" tags="Cutscene" position="454,1025" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="26" name="Fallen Cuboard" tags="" position="1270.3333333333333,1279" size="100,100">The [[misplaced cupboard]], now liyng on the floor is now mearly something the player can move over to acsess the staircase to the [[bedroom]] </tw-passagedata><tw-passagedata pid="27" name="entering bedroom" tags="Cutscene" position="624,876" size="100,100">Location: 
+</tw-passagedata><tw-passagedata pid="25" name="second quest intro" tags="Cutscene" position="459,961.6666666666666" size="100,100">Location: 
+[[bedroom]]
+
+[[Narrator]]: &quot;After a long nights rest, [[Protagonist]] awakes. Felling a bit more energetic he decides to explore the house further and sets out to find a place to eat some brekfast.&quot;
+
+[[contiue-&gt;Finding a place to eat]]</tw-passagedata><tw-passagedata pid="26" name="Fallen Cupboard" tags="" position="1280.3333333333333,1210.6666666666665" size="100,100">Location: 
+[[Main Hall]]
+
+Quest:
+[[Looking for a place to sleep]] 
+
+The [[misplaced cupboard]], now liyng on the floor is now mearly something the player can move over to acsess the staircase to the [[bedroom]] </tw-passagedata><tw-passagedata pid="27" name="entering bedroom" tags="Cutscene" position="599,819.3333333333333" size="100,100">Location: 
 [[bedroom]] 
 Quest:
 [[Looking for a place to sleep]] 
@@ -192,5 +225,54 @@ Upon entering the bedroom for the first time the following dialouge occurs:
 
 [[Narrator]]: &quot;As he enters the old bedroom, pictures spring to his mind, pictures of a happy past. Him and his sister jumping on the bed, running through the halls, and his grandparents complaning about getting woken up so early.&quot;
 [[Protagonist]]: &quot;Good times&quot;
-[[Narrator]]: &quot;He says to himself. Not that he actually rembered if they were any good. He just needs the to be good for the moment.&quot;</tw-passagedata></tw-storydata>
+[[Narrator]]: &quot;He says to himself. Not that he actually rembered if they were any good. He just needs the to be good for the moment.&quot;</tw-passagedata><tw-passagedata pid="28" name="Finding a place to eat" tags="Gameplay Quest" position="459,1111.6666666666667" size="100,100">Locations:
+[[bedroom]] 
+[[Dining Hall]]
+[[Main Hall]]
+
+Goal:
+Find a nice place to eat
+
+Obstacle:
+The Door to the [[Dining Hall]] is locked
+The [[Dining Hall]] looks like shit
+Solution:
+</tw-passagedata><tw-passagedata pid="29" name="Side Table" tags="Object" position="1472.6666666666667,698.6666666666667" size="100,100">Location:
+[[bedroom]] 
+
+A small table next to the [[bed]]
+Has two small drawers
+A [[bedside lamp]] sits upon it
+Contains a old [[Newspaper]]
+
+*Pull:*
+</tw-passagedata><tw-passagedata pid="30" name="Newspaper" tags="Object Pick-Up" position="1470.9999999999998,948.6666666666667" size="100,100">Location: [[bedroom]]
+
+Found within the [[Side Table]]
+</tw-passagedata><tw-passagedata pid="31" name="Laundry bascet" tags="Object" position="1467.6666666666665,1078.6666666666667" size="100,100">Location:
+[[bedroom]]
+
+Quest:
+[[Finding a place to eat]] 
+
+An empty bascet containing no hidden switch or does it?
+The hidden switch is revealed by using the [[Flashlight]]
+The hidden switch opens the [[door to the dining hall]] </tw-passagedata><tw-passagedata pid="32" name="door to the dining hall" tags="Object" position="1272.6666666666672,1340.6666666666665" size="100,100">Location: 
+[[Main Hall]] 
+
+Quest:
+[[Finding a place to eat]] 
+
+A loked door leading from the [[Main Hall]] to the [[Dining Hall]] </tw-passagedata><tw-passagedata pid="33" name="bedside lamp" tags="Object Pick-Up" position="1472.6666666666667,827" size="100,100">Location:
+[[bedroom]] 
+
+Quest:
+
+</tw-passagedata><tw-passagedata pid="34" name="Flashlight" tags="Object Flashlight" position="1466,1205.3333333333335" size="100,100">Location: 
+[[bedroom]] 
+
+Quest:
+[[Finding a place to eat]] 
+
+Can be found within the [[bed]] </tw-passagedata></tw-storydata>
 
